syntax = "proto3";

package proto;

import "google/protobuf/empty.proto";

option go_package = "github.com/dimazhornyk/generic-proving-network/proto";

service ProvingNetworkService {
  rpc ComputeProof(ComputeProofRequest) returns (google.protobuf.Empty);
  rpc GetProof(GetProofRequest) returns (GetProofResponse);
}

message ComputeProofRequest {
  string request_id = 1;
  string consumer_address = 2;
  string consumer_name = 3;
  bytes data = 4;
  bytes signature = 5; // signature should be done of the hash of this struct without signature
}

message GetProofRequest {
  string request_id = 1;
}

message GetProofResponse {
  string proof_id = 1;
  bytes proof = 2;
  int64 timestamp = 3;
}
